# cpp_marathon

./: README.md
not_my/: CMakeLists.txt
not_my/3dparty/: CMakeLists.txt
not_my/app/: CMakeLists.txt  main.cpp
not_my/app/src/: CMakeLists.txt  Elements.cpp  Elements.h  Snake.cpp  Snake.h  header.h
race00/: CMakeLists.txt
race00/app/: CMakeLists.txt  main.cpp
sp00/t00/: CMakeLists.txt
sp00/t01/: printDialog.cpp
sp00/t02/: CMakeLists.txt  walletManager.cpp
sp00/t03/: castSpells.h
sp00/t04/: referenceOrPointer.cpp
sp00/t05/: main.cpp
sp00/t06/: main.cpp  meadSong.cpp  meadSong.h
sp00/t07/: CMakeLists.txt
sp01/t00/: main.cpp
sp01/t01/: main.cpp
sp01/t02/: CMakeLists.txt  main.cpp
sp01/t03/: CMakeLists.txt  main.cpp
sp01/t04/: CMakeLists.txt  file.txt  main.cpp
sp01/t05/: CMakeLists.txt  file_mod.txt  main.cpp
sp02/t00/: CMakeLists.txt  file.txt  main.cpp
sp02/t01/: CMakeLists.txt  f1.txt  file.txt  main.cpp
sp02/t01/src/: CMakeLists.txt  count.cpp  count.h
sp02/t02/: CMakeLists.txt  f1.txt  file.txt  main.cpp
sp03/t00/: main.cpp  templateAddition.h
sp03/t01/: main.cpp  outputAny.h
sp03/t02/: main.cpp  sumOfArguments.h
sp03/t03/: f1.txt  main.cpp  sumFileData.h
sp03/t04/: main.cpp  outputContainer.h
sp03/t05/: CMakeLists.txt  main.cpp  squareValue.h
sp03/t06/: isPalindrome.h  main.cpp
sp03/t07/: sortValues.h
sp04/t00/: CMakeLists.txt
sp04/t01/: CMakeLists.txt
sp04/t01/app/: CMakeLists.txt  main.cpp
sp04/t01/app/src/: Axe.cpp  Axe.h  ImperialSoldier.cpp  ImperialSoldier.h  StormcloakSoldier.cpp  StormcloakSoldier.h  Sword.cpp  Sword.h
sp04/t02/: CMakeLists.txt
sp04/t02/app/: CMakeLists.txt  main.cpp
sp04/t02/app/src/: dragon.h  dragonborn.c  dragonborn.cpp  dragonborn.h
sp05/t02/: CMakeLists.txt
(+143 files in other folders)
